Fix for bug 467671 (Leak 6 nsGlobalWindows due to DOMAnimatedLength not participating in cycle collection).