content/svg/content/src/nsSVGBoolean.h
@@ -72,7 +72,8 @@ private:
 
   struct DOMAnimatedBoolean : public nsIDOMSVGAnimatedBoolean
   {
-    NS_DECL_ISUPPORTS
+    NS_DECL_CYCLE_COLLECTING_ISUPPORTS
+    NS_DECL_CYCLE_COLLECTION_CLASS(DOMAnimatedBoolean)
 
     DOMAnimatedBoolean(nsSVGBoolean* aVal, nsSVGElement *aSVGElement)
       : mVal(aVal), mSVGElement(aSVGElement) {}
